--- a/solution.ipynb
+++ b/solution.ipynb
@@ -661,7 +661,7 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x281daf47a00>"
+              "<seaborn.axisgrid.PairGrid at 0x1f553beba90>"
             ]
           },
           "execution_count": 8,
@@ -883,19 +883,7 @@
       "metadata": {
         "id": "fDwQLXEO43I2"
       },
-      "outputs": [
-        {
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/content/drive/MyDrive/ml_models/random_model.pkl'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4320/2970697361.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# load the model from disk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mloaded_model\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'/content/drive/MyDrive/ml_models/random_model.pkl'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/ml_models/random_model.pkl'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# # load the model from disk\n",
         "# loaded_model = pickle.load(open('/content/drive/MyDrive/ml_models/random_model.pkl', 'rb'))"
@@ -912,11 +900,120 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "pYJXyCPeqGGz"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Sample ID</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>Dating</th>\n",
+              "      <th>AncientComponent1</th>\n",
+              "      <th>AncientComponent1_diff_mean</th>\n",
+              "      <th>AncientComponent2</th>\n",
+              "      <th>AncientComponent3</th>\n",
+              "      <th>AncientComponent4</th>\n",
+              "      <th>AncientComponent5</th>\n",
+              "      <th>ModernComponent1</th>\n",
+              "      <th>ModernComponent2</th>\n",
+              "      <th>ModernComponent3</th>\n",
+              "      <th>mean_Ancient_columns</th>\n",
+              "      <th>Mean date (BP)</th>\n",
+              "      <th>TPS predicted date (BP)</th>\n",
+              "      <th>difference</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>79</th>\n",
+              "      <td>ALA028</td>\n",
+              "      <td>Turkey</td>\n",
+              "      <td>Direct: IntCal20</td>\n",
+              "      <td>0.804012</td>\n",
+              "      <td>0.147650</td>\n",
+              "      <td>0.099667</td>\n",
+              "      <td>0.07478</td>\n",
+              "      <td>0.00001</td>\n",
+              "      <td>0.001605</td>\n",
+              "      <td>0.028964</td>\n",
+              "      <td>0.394844</td>\n",
+              "      <td>0.039069</td>\n",
+              "      <td>0.107425</td>\n",
+              "      <td>3705.0</td>\n",
+              "      <td>4802.0</td>\n",
+              "      <td>1097.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4098</th>\n",
+              "      <td>WEZ56.SG</td>\n",
+              "      <td>Germany</td>\n",
+              "      <td>Context: Archaeological - Period</td>\n",
+              "      <td>0.548674</td>\n",
+              "      <td>0.167632</td>\n",
+              "      <td>0.171319</td>\n",
+              "      <td>0.00001</td>\n",
+              "      <td>0.09086</td>\n",
+              "      <td>0.017590</td>\n",
+              "      <td>0.028525</td>\n",
+              "      <td>0.620778</td>\n",
+              "      <td>0.025139</td>\n",
+              "      <td>0.065112</td>\n",
+              "      <td>3200.0</td>\n",
+              "      <td>2658.0</td>\n",
+              "      <td>542.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Sample ID  Country                            Dating  AncientComponent1  \\\n",
+              "79      ALA028   Turkey                  Direct: IntCal20           0.804012   \n",
+              "4098  WEZ56.SG  Germany  Context: Archaeological - Period           0.548674   \n",
+              "\n",
+              "      AncientComponent1_diff_mean  AncientComponent2  AncientComponent3  \\\n",
+              "79                       0.147650           0.099667            0.07478   \n",
+              "4098                     0.167632           0.171319            0.00001   \n",
+              "\n",
+              "      AncientComponent4  AncientComponent5  ModernComponent1  \\\n",
+              "79              0.00001           0.001605          0.028964   \n",
+              "4098            0.09086           0.017590          0.028525   \n",
+              "\n",
+              "      ModernComponent2  ModernComponent3  mean_Ancient_columns  \\\n",
+              "79            0.394844          0.039069              0.107425   \n",
+              "4098          0.620778          0.025139              0.065112   \n",
+              "\n",
+              "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
+              "79            3705.0                   4802.0      1097.0  \n",
+              "4098          3200.0                   2658.0       542.0  "
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "test_predictions = X_test.copy()\n",
         "test_predictions['Mean date (BP)'] = y_test\n",
@@ -948,13 +1045,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "f75vWbJJXsx-"
@@ -965,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -980,17 +1070,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 462.3314035087719\n",
-            "MSE: 596298.8754708503\n",
-            "RMSE: 772.2039079613947\n",
-            "R2 Square 0.8842938730205804\n",
+            "MAE: 466.119028340081\n",
+            "MSE: 601688.2574491227\n",
+            "RMSE: 775.6856692302125\n",
+            "R2 Square 0.8832481146917118\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 226.7445898484484\n",
-            "MSE: 164492.75260096224\n",
-            "RMSE: 405.57706123616293\n",
-            "R2 Square 0.968424198595618\n",
+            "MAE: 225.22368053885012\n",
+            "MSE: 167187.21030921338\n",
+            "RMSE: 408.88532660051936\n",
+            "R2 Square 0.9679069742185986\n",
             "__________________________________\n"
           ]
         }
