--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,34 +2,58 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ZBX_r7jFTLq7"
-      },
+      "metadata": {},
       "source": [
         "## Solution Steps: \n",
-        "1. Accessing the data\n",
         "\n",
-        "2. Exploring the data (initial data analysis)\n",
+        "1. Data access"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "2. Data exploration (initial data analysis)\n",
         "\n",
-        "  2.1. Exploring feature and target distribution\n",
-        "  \n",
-        "3. Preparing the data\n",
+        "    2.1. Exploration of features and target distribution"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "3. Data Preparation\n",
         "\n",
-        "  3.1. Cleaning the data\n",
+        "    3.1. Clean the data\n",
         "\n",
-        "  3.2. Filtering important features\n",
+        "    3.2. Filter important features\n",
         "\n",
-        "  3.3. Checking missing values\n",
+        "    3.3. Check for missing values\n",
         "\n",
-        "  3.4. Checking for correlation and important features\n",
+        "    3.4. Check for correlation and important features\n",
         "\n",
-        "  3.5. Feature engineering (feature extraction, feature selection)\n",
-        "\n",
-        "4. Training model\n",
-        "\n",
-        "5. Using the model (Prediction)\n",
-        "\n",
-        "6. Evaluating the model (accuracy)"
+        "    3.5. Feature engineering (feature extraction, feature selection)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "4. Train the model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "5. Use the model (Prediction)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "6. Evaluate the model (accuracy)"
       ]
     },
     {
@@ -38,7 +62,7 @@
         "id": "AccqhzGZTJND"
       },
       "source": [
-        "## **Importing libraries**"
+        "## **Import Libraries**"
       ]
     },
     {
@@ -55,17 +79,12 @@
         "import matplotlib.pyplot as plt\n",
         "from scipy import stats\n",
         "from scipy.stats import zscore,norm\n",
-        "from sklearn.model_selection import StratifiedShuffleSplit\n",
         "from sklearn.model_selection import train_test_split\n",
         "from IPython.display import display\n",
         "from sklearn import metrics\n",
-        "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import r2_score\n",
         "from sklearn.model_selection import KFold\n",
         "import random\n",
-        "import scipy.stats\n",
         "import pickle\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -77,7 +96,7 @@
         "id": "BAUwKmgzQfrv"
       },
       "source": [
-        "## **Accessing the data** ##"
+        "## **Data Access** ##"
       ]
     },
     {
@@ -88,10 +107,10 @@
       "source": [
         "We have two main datasets, **Ancients** and **Moderns**.\n",
         "\n",
-        " Ancient genomes from Europe and Asia are found in Ancients, while Euroasian genomes with a DataBP of 10 are found in Moderns.\n",
+        " Ancient genomes from Europe and Asia are found in Ancients, while Eurasian genomes with a DataBP of 10 are found in Moderns.\n",
         "\n",
         "**Note:** \n",
-        "Dataset files should be available on data folder (Euroasian.xlsx, Euroasian_modern_samples.csv, 20130606_sample_info.xlsx, Test Cases.xlsxm Reich dataset V50.xlsx) "
+        "Dataset files should be available in the data folder(Eurasian.xlsx, Eurasian_modern_samples.csv, 20130606_sample_info.xlsx, Test Cases.xlsx Reich dataset V50.xlsx) "
       ]
     },
     {
@@ -104,9 +123,9 @@
       "source": [
         "baseDir='data'\n",
         "#ancient samples\n",
-        "dataset =  pd.ExcelFile(f\"{baseDir}/Euroasian - Dataset_tims.xlsx\")\n",
-        "Euroasian = pd.read_excel(dataset, 'Euroasian')\n",
-        "Ancients = Euroasian[[ 'AncientComponent1', 'AncientComponent2','AncientComponent3', 'AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
+        "dataset =  pd.ExcelFile(f\"{baseDir}/Eurasian - Dataset_tims.xlsx\")\n",
+        "Eurasian = pd.read_excel(dataset, 'Eurasian')\n",
+        "Ancients = Eurasian[[ 'AncientComponent1', 'AncientComponent2','AncientComponent3', 'AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
         "                'ModernComponent2', 'ModernComponent3', 'Date mean in BP in years before 1950 CE [OxCal mu for a direct radiocarbon date, and average of range for a contextual date]'\n",
         "                ,'Method for Determining Date; unless otherwise specified, calibrations use 95.4% intervals from OxCal v4.4.2 Bronk Ramsey (2009); r:5; Atmospheric data from Reimer et al (2020)'\n",
         "                , 'Sample ID', 'Country'\n",
@@ -120,7 +139,7 @@
         "},inplace=True)\n",
         "\n",
         "# modern samples (DateBP = 10)\n",
-        "modern = pd.read_csv(f\"{baseDir}/Euroasian_modern_samples.csv\")\n",
+        "modern = pd.read_csv(f\"{baseDir}/Eurasian_modern_samples.csv\")\n",
         "modern = modern[[ 'AncientComponent1', 'AncientComponent2','AncientComponent3','AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
         "                                'ModernComponent2','ModernComponent3', 'DateBP', 'Sample ID']] \n",
         "modern.rename(columns = {'DateBP':'Mean date (BP)'}, inplace=True) \n",
@@ -152,7 +171,7 @@
         "id": "npTlJOMtWUXe"
       },
       "source": [
-        "## **Exploring the data (statistical initial analysis)** ##"
+        "## **Data Exploration (Initial Data Analysis)** ##"
       ]
     },
     {
@@ -485,7 +504,7 @@
         }
       ],
       "source": [
-        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # Plot the distribution with a histogram and maximum likelihood gaussian distribution fit.\n",
+        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # the histogram distribution plot and the maximum likelihood gaussian distribution fit\n",
         "fig = plt.figure()\n",
         "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # Generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default).\n",
         "\"\"\"Skewness is a measure of symmetry, or more precisely, the lack of symmetry.\n",
@@ -499,7 +518,7 @@
         "id": "AxSwdV_DFB0d"
       },
       "source": [
-        "## **Cleaning the data**"
+        "## **Clean the Data**"
       ]
     },
     {
@@ -541,7 +560,7 @@
         "id": "PYyRpF0haVXT"
       },
       "source": [
-        "## **Checking the missing values** "
+        "## **Check for Missing Values** "
       ]
     },
     {
@@ -648,7 +667,7 @@
         "id": "5zPNi0eVbVpu"
       },
       "source": [
-        "## **Checking for correlation and important features**"
+        "## **Check for correlation and important features**"
       ]
     },
     {
@@ -661,7 +680,7 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x1f553beba90>"
+              "<seaborn.axisgrid.PairGrid at 0x21d30954100>"
             ]
           },
           "execution_count": 8,
@@ -717,7 +736,7 @@
         "id": "Wqy87DHLbBbt"
       },
       "source": [
-        "##**Feature engineering**"
+        "## **Feature engineering**"
       ]
     },
     {
@@ -745,9 +764,9 @@
         "id": "Sim7UXYXsUZ5"
       },
       "source": [
-        "## **Splitting the data**\n",
+        "## **Split the Data**\n",
         "\n",
-        " ## **Train_set, Unseen_data**"
+        " ## **Train_set, Test_set (unseen)**"
       ]
     },
     {
@@ -832,7 +851,7 @@
         "id": "tEcty25_emNA"
       },
       "source": [
-        " ## **Training  model**"
+        " ## **Train the Model**"
       ]
     },
     {
@@ -961,8 +980,8 @@
               "      <td>0.039069</td>\n",
               "      <td>0.107425</td>\n",
               "      <td>3705.0</td>\n",
-              "      <td>4802.0</td>\n",
-              "      <td>1097.0</td>\n",
+              "      <td>4918.0</td>\n",
+              "      <td>1213.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4098</th>\n",
@@ -980,8 +999,8 @@
               "      <td>0.025139</td>\n",
               "      <td>0.065112</td>\n",
               "      <td>3200.0</td>\n",
-              "      <td>2658.0</td>\n",
-              "      <td>542.0</td>\n",
+              "      <td>2540.0</td>\n",
+              "      <td>660.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1005,8 +1024,8 @@
               "4098          0.620778          0.025139              0.065112   \n",
               "\n",
               "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4802.0      1097.0  \n",
-              "4098          3200.0                   2658.0       542.0  "
+              "79            3705.0                   4918.0      1213.0  \n",
+              "4098          3200.0                   2540.0       660.0  "
             ]
           },
           "execution_count": 14,
@@ -1070,17 +1089,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 466.119028340081\n",
-            "MSE: 601688.2574491227\n",
-            "RMSE: 775.6856692302125\n",
-            "R2 Square 0.8832481146917118\n",
+            "MAE: 459.6690148448043\n",
+            "MSE: 580434.8530564103\n",
+            "RMSE: 761.8627521124854\n",
+            "R2 Square 0.8873721357297631\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 225.22368053885012\n",
-            "MSE: 167187.21030921338\n",
-            "RMSE: 408.88532660051936\n",
-            "R2 Square 0.9679069742185986\n",
+            "MAE: 227.17137599230216\n",
+            "MSE: 172194.27367796487\n",
+            "RMSE: 414.9629786835988\n",
+            "R2 Square 0.9669458252557966\n",
             "__________________________________\n"
           ]
         }
