--- a/solution.ipynb
+++ b/solution.ipynb
@@ -6,14 +6,14 @@
       "source": [
         "## Solution Steps: \n",
         "\n",
-        "1. Data access"
+        " 1. Data access"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "2. Data exploration (initial data analysis)\n",
+        " 2. Data exploration (initial data analysis)\n",
         "\n",
         "    2.1. Exploration of features and target distribution"
       ]
@@ -22,7 +22,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "3. Data Preparation\n",
+        " 3. Data Preparation\n",
         "\n",
         "    3.1. Clean the data\n",
         "\n",
@@ -39,14 +39,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "4. Train the model"
+        " 4. Train the model"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "5. Use the model (Prediction)"
+        " 5. Use the model (Prediction)"
       ]
     },
     {
@@ -110,7 +110,7 @@
         " Ancient genomes from Europe and Asia are found in Ancients, while Eurasian genomes with a DataBP of 10 are found in Moderns.\n",
         "\n",
         "**Note:** \n",
-        "Dataset files should be available in the data folder(Eurasian.xlsx, Eurasian_modern_samples.csv, 20130606_sample_info.xlsx, Test Cases.xlsx Reich dataset V50.xlsx) "
+        "Dataset files should be available in the data folder (Eurasian.xlsx, Eurasian_modern_samples.csv, 20130606_sample_info.xlsx, Test Cases.xlsx, and Reich dataset V50.xlsx). "
       ]
     },
     {
@@ -667,7 +667,7 @@
         "id": "5zPNi0eVbVpu"
       },
       "source": [
-        "## **Check for correlation and important features**"
+        "## **Check for Correlation and Important Features**"
       ]
     },
     {
@@ -680,7 +680,7 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x21d30954100>"
+              "<seaborn.axisgrid.PairGrid at 0x1aa1eeccdc0>"
             ]
           },
           "execution_count": 8,
@@ -736,7 +736,7 @@
         "id": "Wqy87DHLbBbt"
       },
       "source": [
-        "## **Feature engineering**"
+        "## **Feature Engineering**"
       ]
     },
     {
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "fDwQLXEO43I2"
       },
@@ -919,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "pYJXyCPeqGGz"
       },
@@ -980,8 +980,8 @@
               "      <td>0.039069</td>\n",
               "      <td>0.107425</td>\n",
               "      <td>3705.0</td>\n",
-              "      <td>4918.0</td>\n",
-              "      <td>1213.0</td>\n",
+              "      <td>4816.0</td>\n",
+              "      <td>1111.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4098</th>\n",
@@ -999,8 +999,8 @@
               "      <td>0.025139</td>\n",
               "      <td>0.065112</td>\n",
               "      <td>3200.0</td>\n",
-              "      <td>2540.0</td>\n",
-              "      <td>660.0</td>\n",
+              "      <td>2508.0</td>\n",
+              "      <td>692.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1024,8 +1024,8 @@
               "4098          0.620778          0.025139              0.065112   \n",
               "\n",
               "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4918.0      1213.0  \n",
-              "4098          3200.0                   2540.0       660.0  "
+              "79            3705.0                   4816.0      1111.0  \n",
+              "4098          3200.0                   2508.0       692.0  "
             ]
           },
           "execution_count": 14,
@@ -1074,7 +1074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1089,17 +1089,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 459.6690148448043\n",
-            "MSE: 580434.8530564103\n",
-            "RMSE: 761.8627521124854\n",
-            "R2 Square 0.8873721357297631\n",
+            "MAE: 458.942995951417\n",
+            "MSE: 586750.4288618083\n",
+            "RMSE: 765.996363478188\n",
+            "R2 Square 0.8861466582952962\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 227.17137599230216\n",
-            "MSE: 172194.27367796487\n",
-            "RMSE: 414.9629786835988\n",
-            "R2 Square 0.9669458252557966\n",
+            "MAE: 227.47003848929515\n",
+            "MSE: 179310.76224568198\n",
+            "RMSE: 423.45101516666836\n",
+            "R2 Square 0.965579753947744\n",
             "__________________________________\n"
           ]
         }
