--- a/solution.ipynb
+++ b/solution.ipynb
@@ -6,6 +6,26 @@
       "source": [
         "## Solution Steps: \n",
         "\n",
+        "1. Data access\n",
+        "2. Data exploration (initial data analysis)  \n",
+        "   2.1. Exploration of features and target distribution  \n",
+        "3. Data Preparation  \n",
+        "   3.1. Clean the data  \n",
+        "   3.2. Filter important features  \n",
+        "   3.3. Check for missing values  \n",
+        "   3.4. Check for correlation and important features  \n",
+        "   3.5. Feature engineering (feature extraction, feature selection)  \n",
+        "4. Train the model\n",
+        "5. Use the model (Prediction)\n",
+        "6. Evaluate the model (accuracy)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Solution Steps: \n",
+        "\n",
         "   1. Data access"
       ]
     },
@@ -15,7 +35,7 @@
       "source": [
         "   2. Data exploration (initial data analysis)\n",
         "\n",
-        "     2.1. Exploration of features and target distribution"
+        "      2.1. Exploration of features and target distribution"
       ]
     },
     {
@@ -24,15 +44,15 @@
       "source": [
         "   3. Data Preparation\n",
         "\n",
-        "     3.1. Clean the data\n",
+        "      3.1. Clean the data\n",
         "\n",
-        "     3.2. Filter important features\n",
+        "      3.2. Filter important features\n",
         "\n",
-        "     3.3. Check for missing values\n",
+        "      3.3. Check for missing values\n",
         "\n",
-        "     3.4. Check for correlation and important features\n",
+        "      3.4. Check for correlation and important features\n",
         "\n",
-        "     3.5. Feature engineering (feature extraction, feature selection)"
+        "      3.5. Feature engineering (feature extraction, feature selection)"
       ]
     },
     {
@@ -680,7 +700,7 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x1f8b217d190>"
+              "<seaborn.axisgrid.PairGrid at 0x2067a6afa00>"
             ]
           },
           "execution_count": 8,
@@ -980,8 +1000,8 @@
               "      <td>0.039069</td>\n",
               "      <td>0.107425</td>\n",
               "      <td>3705.0</td>\n",
-              "      <td>4896.0</td>\n",
-              "      <td>1191.0</td>\n",
+              "      <td>4911.0</td>\n",
+              "      <td>1206.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4098</th>\n",
@@ -999,8 +1019,8 @@
               "      <td>0.025139</td>\n",
               "      <td>0.065112</td>\n",
               "      <td>3200.0</td>\n",
-              "      <td>2558.0</td>\n",
-              "      <td>642.0</td>\n",
+              "      <td>2915.0</td>\n",
+              "      <td>285.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1024,8 +1044,8 @@
               "4098          0.620778          0.025139              0.065112   \n",
               "\n",
               "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4896.0      1191.0  \n",
-              "4098          3200.0                   2558.0       642.0  "
+              "79            3705.0                   4911.0      1206.0  \n",
+              "4098          3200.0                   2915.0       285.0  "
             ]
           },
           "execution_count": 14,
@@ -1089,17 +1109,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 461.937705802969\n",
-            "MSE: 601020.4909754385\n",
-            "RMSE: 775.2551134790654\n",
-            "R2 Square 0.8833776884265871\n",
+            "MAE: 458.8656545209177\n",
+            "MSE: 589735.1199796222\n",
+            "RMSE: 767.9421332233453\n",
+            "R2 Square 0.8855675073633086\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 226.6988621602117\n",
-            "MSE: 167650.49184823188\n",
-            "RMSE: 409.45145237040236\n",
-            "R2 Square 0.9678180433347812\n",
+            "MAE: 230.03806110175606\n",
+            "MSE: 183703.2199974982\n",
+            "RMSE: 428.6061362107386\n",
+            "R2 Square 0.964736583829575\n",
             "__________________________________\n"
           ]
         }
