--- a/solution.ipynb
+++ b/solution.ipynb
@@ -22,62 +22,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Solution Steps: \n",
-        "\n",
-        "   1. Data access"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "   2. Data exploration (initial data analysis)\n",
-        "\n",
-        "      2.1. Exploration of features and target distribution"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "   3. Data Preparation\n",
-        "\n",
-        "      3.1. Clean the data\n",
-        "\n",
-        "      3.2. Filter important features\n",
-        "\n",
-        "      3.3. Check for missing values\n",
-        "\n",
-        "      3.4. Check for correlation and important features\n",
-        "\n",
-        "      3.5. Feature engineering (feature extraction, feature selection)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "   4. Train the model"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "   5. Use the model (Prediction)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "   6. Evaluate the model (accuracy)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "AccqhzGZTJND"
       },
@@ -524,9 +468,9 @@
         }
       ],
       "source": [
-        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # the histogram distribution plot and the maximum likelihood gaussian distribution fit\n",
+        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # A frequency distribution plot and the maximum likelihood gaussian distribution fit\n",
         "fig = plt.figure()\n",
-        "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # Generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default).\n",
+        "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # It generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default).\n",
         "\"\"\"Skewness is a measure of symmetry, or more precisely, the lack of symmetry.\n",
         " Kurtosis is a measure of whether the data are heavy-tailed or light-tailed relative to a normal distribution.\n",
         " That is, data sets with high kurtosis tend to have heavy tails, or outliers.\"\"\""
@@ -627,7 +571,7 @@
       ],
       "source": [
         "print(Ancients.isnull().sum()) # No missing values are found\n",
-        "print(Moderns.isnull().sum()) # No missing values are found"
+        "print(Moderns.isnull().sum()) # No missing values are found, Their Datings are intentionally left blank."
       ]
     },
     {
@@ -700,7 +644,7 @@
         {
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x2067a6afa00>"
+              "<seaborn.axisgrid.PairGrid at 0x13e25acae80>"
             ]
           },
           "execution_count": 8,
@@ -810,42 +754,42 @@
         }
       ],
       "source": [
-        "#removing test cases IDs\n",
+        "#set aside test cases as an unseen set\n",
         "Brandysek_inds_in_Ancients = Ancients[Ancients[\"Sample ID\"].isin(Brandysek_inds[\"Sample ID\"].values)]\n",
         "Ancients = Ancients.drop(Brandysek_inds_in_Ancients.index)\n",
         "\n",
-        "# In order to get a better result, we stratified the dataset, so we need to add a few more columns.\n",
-        "# creating temporary columns\n",
+        "# To get a better result, we stratified the dataset, so we need to add a few more columns.\n",
+        "# create temporary columns\n",
         "Ancients['cut'] = pd.qcut(Ancients['Mean date (BP)'], q = 10, duplicates= 'drop',labels=False, precision = 0) #df was divided into 10 subsets based on DateBP column.\n",
         "Ancients['Country_cut'] = Ancients['cut'].astype(str) + Ancients['Country'].astype(str)\n",
         "count_freq = dict(Ancients['Country_cut'].value_counts())\n",
         "Ancients['count_freq'] = Ancients['Country_cut']\n",
         "Ancients['count_freq'] = Ancients['count_freq'].map(count_freq)\n",
-        "train1 = Ancients[Ancients.count_freq == 1] #shape =((63,10), 63 of them  were repeated once; we keep them for training.\n",
+        "train1 = Ancients[Ancients.count_freq == 1] #shape =((63,10), 63 of ancients were repeated once; we keep them for training.\n",
         "Ancients  = Ancients[Ancients.count_freq >1]\n",
         "\n",
-        "#stratified ancient genomes based on location and age\n",
+        "#stratify ancient genomes based on their ages and locations\n",
         "train_set, test_set = train_test_split(Ancients, test_size = 0.15, random_state = 0, stratify = Ancients['Country_cut']) \n",
         "train_set = train_set.append([train1])\n",
         "\n",
-        "# removing temporary columns\n",
+        "# remove temporary columns\n",
         "train_set = train_set[train_set.columns.difference(['Country_cut', 'count_freq', 'cut'])]\n",
         "test_set = test_set[test_set.columns.difference(['Country_cut', 'count_freq', 'cut'])]\n",
         "\n",
-        "#stratified modern samples based on location\n",
+        "#stratify modern samples based on their locations\n",
         "Moderns['location'] = Moderns['Country'].astype(str)  #{'CDX': 93,'CEU': 99, 'CHB': 103, 'CHS': 105, 'FIN': 99,'GBR': 91,'IBS': 107,'ITU': 102, 'JPT': 104,'KHV': 99,'PJL': 96,\n",
         "#'STU': 102,'TSI': 107}\n",
         "modern_for_modeling, modern_for_test = train_test_split(Moderns, test_size = 0.15, random_state = 42, stratify = Moderns['location']) \n",
         "modern_for_test = modern_for_test[modern_for_test.columns.difference([ 'location'])]\n",
         "modern_for_modeling = modern_for_modeling[modern_for_modeling.columns.difference([ 'location'])]\n",
         "\n",
-        "#unseen data, train_set, test_set (validation)\n",
+        "#train_set, test_set (unseen)\n",
         "test_set = test_set.append([modern_for_test, Brandysek_inds_in_Ancients])\n",
         "test_set.sample(frac=1) # shuffle the DataFrame rows\n",
         "train_set = train_set.append([modern_for_modeling])\n",
         "train_set =train_set.sample(frac=1)\n",
         "\n",
-        "#dropping Sample ID and Counrty columns    \n",
+        "#drop Sample ID, Counrty, Dating and STD columns    \n",
         "whole_set = train_set.append([test_set])\n",
         "whole_set1 = whole_set.copy()\n",
         "whole_set = whole_set[whole_set.columns.difference(['Sample ID','Dating', 'Country', 'STD'])]\n",
@@ -1000,8 +944,8 @@
               "      <td>0.039069</td>\n",
               "      <td>0.107425</td>\n",
               "      <td>3705.0</td>\n",
-              "      <td>4911.0</td>\n",
-              "      <td>1206.0</td>\n",
+              "      <td>4802.0</td>\n",
+              "      <td>1097.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4098</th>\n",
@@ -1019,8 +963,8 @@
               "      <td>0.025139</td>\n",
               "      <td>0.065112</td>\n",
               "      <td>3200.0</td>\n",
-              "      <td>2915.0</td>\n",
-              "      <td>285.0</td>\n",
+              "      <td>2664.0</td>\n",
+              "      <td>536.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1044,8 +988,8 @@
               "4098          0.620778          0.025139              0.065112   \n",
               "\n",
               "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4911.0      1206.0  \n",
-              "4098          3200.0                   2915.0       285.0  "
+              "79            3705.0                   4802.0      1097.0  \n",
+              "4098          3200.0                   2664.0       536.0  "
             ]
           },
           "execution_count": 14,
@@ -1109,17 +1053,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 458.8656545209177\n",
-            "MSE: 589735.1199796222\n",
-            "RMSE: 767.9421332233453\n",
-            "R2 Square 0.8855675073633086\n",
+            "MAE: 462.24539811066137\n",
+            "MSE: 597972.2892010796\n",
+            "RMSE: 773.2866798290784\n",
+            "R2 Square 0.8839691629975971\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 230.03806110175606\n",
-            "MSE: 183703.2199974982\n",
-            "RMSE: 428.6061362107386\n",
-            "R2 Square 0.964736583829575\n",
+            "MAE: 222.30651912436852\n",
+            "MSE: 158026.36063800816\n",
+            "RMSE: 397.52529559514596\n",
+            "R2 Square 0.9696654782580749\n",
             "__________________________________\n"
           ]
         }
